kubernetes/monitoring/prometheus/node-exporter.yml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  labels:
    app: node-exporter
spec:
  type: ExternalName
  externalName: zevrant-services.com
  ports:
    - port: 9100
      name: http

---

apiVersion: v1
kind: Endpoints
metadata:
  name: node-exporter
  labels:
    app: node-exporter
subsets:
  - addresses:
      - ip: 172.16.1.10
      - ip: 172.16.1.9
      - ip: 172.16.1.8
      - ip: 172.16.1.7
      - ip: 172.16.1.13
      - ip: 172.16.1.14
    ports:
      - port: 9100
        name: node-exporter


---

#apiVersion: v1
#kind: Service
#metadata:
#  name: node-exporter-zevrant-02
#  labels:
#    app: node-exporter
#spec:
#  type: ExternalName
#  externalName: zevrant-02.zevrant-services.com
#  ports:
#    - port: 9100
#      name: http
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: node-exporter-zevrant-03
#  labels:
#    app: node-exporter
#spec:
#  type: ExternalName
#  externalName: zevrant-03.zevrant-services.com
#  ports:
#    - port: 9100
#      name: http
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: node-exporter-zevrant-04
#  labels:
#    app: node-exporter
#spec:
#  type: ExternalName
#  externalName: zevrant-04.zevrant-services.com
#  ports:
#    - port: 9100
#      name: http
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: node-exporter-zevrant-05
#  labels:
#    app: node-exporter
#spec:
#  type: ExternalName
#  externalName: zevrant-05.zevrant-services.com
#  ports:
#    - port: 9100
#      name: http
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: node-exporter-zevrant-06
#  labels:
#    app: node-exporter
#spec:
#  type: ExternalName
#  externalName: zevrant-06.zevrant-services.com
#  ports:
#    - port: 9100
#      name: http
#
#---
