kubernetes/monitoring/prometheus/prometheus.yml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: prometheus
spec:
  type: ClusterIP
  ports:
    - port: 9090
#      nodePort: 30627
      name: https
    - port: 80
      name: http
  selector:
    app: prometheus

---

apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: prometheus
spec:
  ports:
    - port: 10902
      targetPort: 10902
      name: http
  selector:
    app: prometheus

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      serviceAccountName: prometheus
      volumes:
        - name: prometheus-data
          persistentVolumeClaim:
            claimName: metrics-database
        - name: prometheus-cert
          secret:
            secretName: prometheus-monitoring-tls
        - name: password-volume
          emptyDir:
            sizeLimit: "1Mi"
        - name: prometheus-config
          configMap:
            name: prometheus-config
        - name: objstore-config
          secret:
            secretName: thanos-objstore-config
      containers:
        - name: prometheus
          image: harbor.zevrant-services.internal/dockerhub/prom/prometheus:latest
          args:
            - --storage.tsdb.min-block-duration=5m
            - --storage.tsdb.max-block-duration=5m
            - --storage.tsdb.retention.time=2h
            - --config.file=/etc/prometheus/..data/prometheus.yml
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          imagePullPolicy: Always
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/
            - name: metrics-database
              mountPath: /prometheus
            - name: prometheus-cert
              mountPath: /var/run/zevrant-services/prometheus-certs/
          ports:
            - containerPort: 9090
          resources:
            requests:
              memory: 8Gi
              cpu: 2000m
            limits:
              memory: 8Gi
              cpu: 2000m
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 9090
            failureThreshold: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 9090
            failureThreshold: 3
            periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: metrics-database
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: '150Gi'
