kubernetes/monitoring/prometheus/ingress.yml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: thanos
#  annotations:
#    nginx.ingress.kubernetes.io/backend-protocol: "https"
#    nginx.ingress.kubernetes.io/proxy-body-size: "0"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#spec:
#  rules:
#    - host: thanos.preprod.zevrant-services.internal
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: thanos-query-frontend
#                port:
#                  name: http
#  ingressClassName: nginx
#  tls:
#    - hosts:
#        - thanos.preprod.zevrant-services.internal
#      secretName: thanos-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "http"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: prometheus-monitoring.preprod.zevrant-services.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  name: https
  ingressClassName: nginx
#  tls:
#    - hosts:
#        - prometheus-monitoring.preprod.zevrant-services.internal
#      secretName: prometheus-monitoring-tls
